[gd_scene load_steps=17 format=3 uid="uid://t7r3fcl5f6bq"]

[ext_resource type="Script" uid="uid://wjx33o3khby" path="res://scripts/ui.gd" id="1_dj8aq"]
[ext_resource type="Theme" uid="uid://cjjnou2sqyo8x" path="res://Icon Font.tres" id="2_3wlde"]
[ext_resource type="Texture2D" uid="uid://jwrwchwjifoi" path="res://assets/crops/icons/Weart pocket e.png" id="3_ukj8e"]
[ext_resource type="FontFile" uid="uid://2myli6hccnxj" path="res://assets/PixelifySans-VariableFont_wght.ttf" id="3_w7enk"]
[ext_resource type="Texture2D" uid="uid://dcd02x2m40673" path="res://assets/crops/icons/Carrot Seeds.png" id="4_3wlde"]
[ext_resource type="Texture2D" uid="uid://b4b5qxbtwfa6l" path="res://assets/crops/icons/PepperSeedPacket.png" id="5_24e4x"]
[ext_resource type="Texture2D" uid="uid://d3hvq3akrn4bv" path="res://assets/crops/icons/Corn seads.png" id="6_w7enk"]
[ext_resource type="Texture2D" uid="uid://cnmofqjf0wqnv" path="res://assets/Coin.png" id="7_24e4x"]
[ext_resource type="Texture2D" uid="uid://dx04cjbbw5q12" path="res://assets/Tornado32.png" id="9_ukj8e"]
[ext_resource type="Texture2D" uid="uid://c2n1v507c035p" path="res://assets/Rain.png" id="9_w7enk"]
[ext_resource type="Texture2D" uid="uid://cxoxwt3rsu16q" path="res://assets/crops/Icons/Seed Packet Base 2 (1).png" id="11_aputy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7paak"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xpksx"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aputy"]
bg_color = Color(0.572549, 0.572549, 0.270588, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5sqrc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mhjpf"]

[node name="UI" type="Control"]
z_index = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dj8aq")

[node name="TabContainer" type="TabContainer" parent="."]
top_level = true
z_index = 3
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -256.0
offset_top = 128.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_selected_color = Color(1, 1, 1, 1)
theme_override_constants/icon_separation = 0
theme_override_fonts/font = ExtResource("3_w7enk")
theme_override_styles/tab_focus = SubResource("StyleBoxEmpty_7paak")
theme_override_styles/panel = SubResource("StyleBoxFlat_xpksx")
theme_override_styles/tab_selected = SubResource("StyleBoxFlat_aputy")
theme_override_styles/tab_hovered = SubResource("StyleBoxEmpty_5sqrc")
theme_override_styles/tab_unselected = SubResource("StyleBoxEmpty_mhjpf")
tab_alignment = 1
current_tab = 0
all_tabs_in_front = true
tabs_rearrange_group = 1

[node name="Seeds" type="Control" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Wheat Seed" type="Button" parent="TabContainer/Seeds"]
layout_mode = 2
offset_left = 12.0
offset_top = 12.0
offset_right = 124.0
offset_bottom = 92.0
theme = ExtResource("2_3wlde")
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/h_separation = 0
theme_override_fonts/font = ExtResource("3_w7enk")
theme_override_font_sizes/font_size = 12
text = "Wheat
$14.00"
icon = ExtResource("3_ukj8e")
alignment = 0

[node name="Carrots Seed" type="Button" parent="TabContainer/Seeds"]
layout_mode = 2
offset_left = 132.0
offset_top = 12.0
offset_right = 244.0
offset_bottom = 92.0
theme = ExtResource("2_3wlde")
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/h_separation = 0
theme_override_fonts/font = ExtResource("3_w7enk")
theme_override_font_sizes/font_size = 10
text = "Carrot
$20.00"
icon = ExtResource("4_3wlde")
alignment = 0

[node name="Pepper Seed" type="Button" parent="TabContainer/Seeds"]
layout_mode = 2
offset_left = 12.0
offset_top = 100.0
offset_right = 124.0
offset_bottom = 180.0
theme = ExtResource("2_3wlde")
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/h_separation = 0
theme_override_fonts/font = ExtResource("3_w7enk")
theme_override_font_sizes/font_size = 11
text = "Pepper
$22.00"
icon = ExtResource("5_24e4x")
alignment = 0

[node name="Corn Seed" type="Button" parent="TabContainer/Seeds"]
layout_mode = 2
offset_left = 132.0
offset_top = 100.0
offset_right = 244.0
offset_bottom = 180.0
theme = ExtResource("2_3wlde")
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/h_separation = 0
theme_override_fonts/font = ExtResource("3_w7enk")
theme_override_font_sizes/font_size = 12
text = "Corn
$11.00"
icon = ExtResource("6_w7enk")
alignment = 0

[node name="Upgrades" type="Control" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Crops" type="Control" parent="TabContainer/Upgrades"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Wheat" type="Button" parent="TabContainer/Upgrades/Crops"]
layout_mode = 2
offset_left = 12.0
offset_top = 12.0
offset_right = 124.0
offset_bottom = 92.0
theme = ExtResource("2_3wlde")
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/h_separation = 0
theme_override_fonts/font = ExtResource("3_w7enk")
theme_override_font_sizes/font_size = 12
text = "Wheat
"
icon = ExtResource("3_ukj8e")
alignment = 0

[node name="Carrots" type="Button" parent="TabContainer/Upgrades/Crops"]
layout_mode = 2
offset_left = 132.0
offset_top = 12.0
offset_right = 244.0
offset_bottom = 92.0
theme = ExtResource("2_3wlde")
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/h_separation = 0
theme_override_fonts/font = ExtResource("3_w7enk")
theme_override_font_sizes/font_size = 10
text = "Carrot
"
icon = ExtResource("4_3wlde")
alignment = 0

[node name="Pepper" type="Button" parent="TabContainer/Upgrades/Crops"]
layout_mode = 2
offset_left = 12.0
offset_top = 100.0
offset_right = 124.0
offset_bottom = 180.0
theme = ExtResource("2_3wlde")
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/h_separation = 0
theme_override_fonts/font = ExtResource("3_w7enk")
theme_override_font_sizes/font_size = 11
text = "Pepper
"
icon = ExtResource("5_24e4x")
alignment = 0

[node name="Corn" type="Button" parent="TabContainer/Upgrades/Crops"]
layout_mode = 2
offset_left = 132.0
offset_top = 100.0
offset_right = 244.0
offset_bottom = 180.0
theme = ExtResource("2_3wlde")
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/h_separation = 0
theme_override_fonts/font = ExtResource("3_w7enk")
theme_override_font_sizes/font_size = 12
text = "Corn   
"
icon = ExtResource("6_w7enk")
alignment = 0

[node name="Selection" type="Control" parent="TabContainer/Upgrades"]
visible = false
anchors_preset = 0
offset_left = 3.0
offset_top = 1.0
offset_right = 259.0
offset_bottom = 418.0

[node name="RainGains" type="Button" parent="TabContainer/Upgrades/Selection"]
layout_mode = 0
offset_left = 129.0
offset_top = 99.0
offset_right = 241.0
offset_bottom = 179.0
theme = ExtResource("2_3wlde")
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_w7enk")
theme_override_font_sizes/font_size = 10
text = "Crop growth in Rain
"
icon = ExtResource("9_w7enk")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="TornadoResistance" type="Button" parent="TabContainer/Upgrades/Selection"]
layout_mode = 0
offset_left = 129.0
offset_top = 11.0
offset_right = 241.0
offset_bottom = 91.0
theme = ExtResource("2_3wlde")
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_w7enk")
theme_override_font_sizes/font_size = 10
text = "Tornado Resistance"
icon = ExtResource("9_ukj8e")
icon_alignment = 1
vertical_icon_alignment = 0

[node name="SeedPrice" type="Button" parent="TabContainer/Upgrades/Selection"]
layout_mode = 0
offset_left = 9.0
offset_top = 99.0
offset_right = 121.0
offset_bottom = 179.0
theme = ExtResource("2_3wlde")
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_w7enk")
theme_override_font_sizes/font_size = 11
text = "Cheap
Seeds"
icon = ExtResource("11_aputy")
alignment = 0

[node name="SellValue" type="Button" parent="TabContainer/Upgrades/Selection"]
layout_mode = 0
offset_left = 9.0
offset_top = 11.0
offset_right = 121.0
offset_bottom = 91.0
theme = ExtResource("2_3wlde")
theme_type_variation = &"FlatButton"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_w7enk")
theme_override_font_sizes/font_size = 12
text = "Crop
Value"
icon = ExtResource("7_24e4x")
alignment = 0

[connection signal="tab_clicked" from="TabContainer" to="." method="_on_tab_container_tab_clicked"]
[connection signal="gui_input" from="TabContainer/Seeds/Wheat Seed" to="." method="_on_wheat_button_gui_input"]
[connection signal="gui_input" from="TabContainer/Seeds/Carrots Seed" to="." method="_on_carrot_button_gui_input"]
[connection signal="gui_input" from="TabContainer/Seeds/Pepper Seed" to="." method="_on_pepper_button_gui_input"]
[connection signal="gui_input" from="TabContainer/Seeds/Corn Seed" to="." method="_on_corn_button_gui_input"]
[connection signal="pressed" from="TabContainer/Upgrades/Crops/Wheat" to="." method="_on_wheat_pressed"]
[connection signal="pressed" from="TabContainer/Upgrades/Crops/Carrots" to="." method="_on_carrots_pressed"]
[connection signal="pressed" from="TabContainer/Upgrades/Crops/Pepper" to="." method="_on_pepper_pressed"]
[connection signal="pressed" from="TabContainer/Upgrades/Crops/Corn" to="." method="_on_corn_pressed"]
[connection signal="pressed" from="TabContainer/Upgrades/Selection/RainGains" to="." method="_on_rain_gains_pressed"]
[connection signal="pressed" from="TabContainer/Upgrades/Selection/TornadoResistance" to="." method="_on_tornado_resistance_pressed"]
[connection signal="pressed" from="TabContainer/Upgrades/Selection/SeedPrice" to="." method="_on_seed_price_pressed"]
[connection signal="pressed" from="TabContainer/Upgrades/Selection/SellValue" to="." method="_on_sell_value_pressed"]
